src/todo.scss/components/_spinner.scss
@use "../abstract/color" as *;
@use "../abstract/mixin" as *;

.spinner_container {
  @include flex_center;
  width: 100%;
  height: 100vh;
  position: fixed;
  background-color: rgba($background_color, 0.3);
  color: $title_color;
  flex-direction: column;
  justify-content: center;
  padding: 15px;
  margin: 0;
  left: 0;
  top: 0;
  transition: opacity 0.5s visibility 0.5s;
  z-index: 999;

  .spinner {
    @include flex_center;
    content: "";
    width: 100px;
    height: 100px;
    border-radius: 50%;
    animation: spin 1s linear infinite;
    -webkit-animation: spin 1s ease-in-out infinite;
    ::before {
      @extend .spinner;
      box-shadow: 0 0 5px rgba($title_color, 0.3);
    }
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
    box-shadow: 1px 2px 2px $spinner_color;
  }

  50% {
    transform: rotate(180deg);
    box-shadow: 1px 2px 2px $list_color;
  }

  100% {
    transform: rotate(360deg);
    box-shadow: 1px 2px 2px $task_color;
  }
}

@-webkit-keyframes spin {
  to {
    -webkit-transform: rotate(360deg);
  }
}

